--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "intl:extract-messages": "node ./scripts/intlExtractor.js"
   },
   "dependencies": {
     "@material-ui/core": "4.12.3",
@@ -20,9 +21,12 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.1.0",
     "react-scripts": "5.0.1",
     "rescript": "^10.0.1",
     "rescript-material-ui": "^3.0.2",
+    "rescript-react-intl": "^3.0.0",
+    "rescript-react-intl-extractor-bin": "^0.12.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
