--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mobily/rescript-date": "^2.1.0",
     "@rescript/react": "^0.10.3",
     "@ryyppy/rescript-promise": "^2.1.0",
@@ -28,6 +29,7 @@
     "react-scripts": "5.0.1",
     "rescript": "^10.0.1",
     "rescript-material-ui": "^3.0.2",
+    "rescript-material-ui-lab": "^3.0.2",
     "rescript-react-intl": "^3.0.0",
     "rescript-react-intl-extractor-bin": "^0.12.0",
     "web-vitals": "^2.1.4",
