--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poppy-2",
-  "packageManager": "yarn@3.2.3",
+  "packageManager": "yarn@3.3.1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -32,6 +32,7 @@
     "rescript-material-ui-lab": "^3.0.2",
     "rescript-react-intl": "^3.0.0",
     "rescript-react-intl-extractor-bin": "^0.13.0",
+    "rescript-webapi": "^0.7.0",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
