--- a/bsconfig.json
+++ b/bsconfig.json
@@ -22,7 +22,7 @@
     "rescript-material-ui-lab",
     "rescript-webapi"
   ],
-  "reason": { "react-jsx": 3 },
+  "jsx": { "version": 4, "mode": "automatic" },
   "warnings": {
     "number": "+A-42-48",
     "error": "+A-3-44-102-103"
