--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poppy-2",
-  "packageManager": "yarn@3.3.1",
+  "packageManager": "yarn@3.4.1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,29 +13,29 @@
     "intl:extract-messages": "node ./scripts/intlExtractor.js"
   },
   "dependencies": {
-    "@material-ui/core": "4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "@material-ui/core": "4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mobily/rescript-date": "^2.1.0",
-    "@rescript/react": "^0.10.3",
+    "@rescript/react": "^0.11.0",
     "@ryyppy/rescript-promise": "^2.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "^14.4.3",
     "idb-keyval": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intl": "^6.2.5",
+    "react-intl": "^6.2.7",
     "react-loading-overlay": "^1.0.1",
-    "react-material-ui-carousel": "v2",
+    "react-material-ui-carousel": "^3.4.2",
     "react-scripts": "5.0.1",
-    "rescript": "^10.1.0",
+    "rescript": "^10.1.2",
     "rescript-material-ui": "^3.0.2",
     "rescript-material-ui-lab": "^3.0.2",
     "rescript-react-intl": "^3.0.0",
     "rescript-react-intl-extractor-bin": "^0.13.0",
     "rescript-webapi": "^0.7.0",
-    "web-vitals": "^2.1.4",
+    "web-vitals": "^3.1.1",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
     "workbox-cacheable-response": "^6.5.4",
