--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "intl:extract-messages": "node ./scripts/intlExtractor.js"
   },
   "dependencies": {
+    "@emotion/css": "^11.10.6",
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
