--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "re:build": "rescript clean && rescript build -with-deps",
     "re:start": "rescript clean && rescript build -with-deps -w",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "test": "vitest",
     "intl:extract-messages": "node ./scripts/intlExtractor.js"
   },
   "dependencies": {
     "@emotion/css": "^11.10.6",
+    "@jihchi/vite-plugin-rescript": "^5.1.0",
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
@@ -23,18 +24,21 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@vitejs/plugin-react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.3.2",
     "react-loading-overlay": "^1.0.1",
     "react-material-ui-carousel": "^3.4.2",
-    "react-scripts": "5.0.1",
     "rescript": "^10.1.4",
     "rescript-material-ui": "^3.0.2",
     "rescript-material-ui-lab": "^3.0.2",
     "rescript-react-intl": "^3.0.0",
     "rescript-react-intl-extractor-bin": "^0.13.0",
+    "rescript-vitest": "^1.1.0",
     "rescript-webapi": "^0.7.0",
+    "vite": "^4.2.1",
+    "vitest": "^0.29.8",
     "web-vitals": "^3.3.0",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
