--- a/bsconfig.json
+++ b/bsconfig.json
@@ -25,9 +25,11 @@
     "@ryyppy/rescript-promise",
     "@mobily/rescript-date",
     "rescript-material-ui-lab",
-    "rescript-webapi"
+    "rescript-webapi",
+    "@rescript/core"
   ],
   "bs-dev-dependencies": ["rescript-vitest"],
+  "bsc-flags": ["-open RescriptCore"],
   "jsx": { "version": 4, "mode": "automatic" },
   "warnings": {
     "number": "+A-42-48",
