--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mobily/rescript-date": "^2.1.0",
+    "@rescript/core": "^0.2.0",
     "@rescript/react": "^0.11.0",
     "@ryyppy/rescript-promise": "^2.1.0",
     "@testing-library/jest-dom": "^5.16.5",
