--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@emotion/css": "^11.11.0",
+    "@greenlabs/rescript-react-hook-form": "^0.11.2",
     "@jihchi/vite-plugin-rescript": "^5.3.0",
     "@material-ui/core": "4.12.4",
     "@material-ui/icons": "^4.11.3",
@@ -28,6 +29,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-intl": "^6.4.2",
     "react-loading-overlay": "^1.0.1",
     "react-material-ui-carousel": "^3.4.2",
