--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "re:build": "rescript clean && rescript build -with-deps",
     "re:start": "rescript clean && rescript build -with-deps -w",
     "start": "vite",
+    "build:staging": "vite build --mode staging",
     "build": "vite build",
     "serve": "vite preview",
     "test": "vitest",
