--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-intl": "^6.4.2",
     "react-loading-overlay": "^1.0.1",
     "react-material-ui-carousel": "^3.4.2",
-    "rescript": "^10.1.4",
+    "rescript": "^11.0.0-beta.3",
     "rescript-material-ui": "^3.0.2",
     "rescript-material-ui-lab": "^3.0.2",
     "rescript-react-intl": "^3.0.0",
