--- a/package.json
+++ b/package.json
@@ -18,11 +18,8 @@
     "@emotion/css": "^11.11.0",
     "@greenlabs/rescript-react-hook-form": "^0.11.2",
     "@jihchi/vite-plugin-rescript": "^5.3.0",
-    "@material-ui/core": "4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/lab": "^4.0.0-alpha.61",
-    "@material-ui/pickers": "^3.3.10",
     "@mobily/rescript-date": "^2.1.0",
+    "@rescript-mui/material": "^5.0.0-alpha.3",
     "@rescript/core": "^0.3.1",
     "@rescript/react": "^0.11.0",
     "@ryyppy/rescript-promise": "^2.1.0",
@@ -38,8 +35,6 @@
     "react-loading-overlay": "^1.0.1",
     "react-material-ui-carousel": "^3.4.2",
     "rescript": "^11.0.0-beta.3",
-    "rescript-material-ui": "^3.0.2",
-    "rescript-material-ui-lab": "^3.0.2",
     "rescript-react-intl": "^3.0.0",
     "rescript-react-intl-extractor-bin": "^0.13.0",
     "rescript-vitest": "^1.2.0",
