--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poppy-2",
-  "packageManager": "yarn@3.5.1",
+  "packageManager": "yarn@4.0.1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,46 +14,47 @@
     "intl:extract-messages": "node ./scripts/intlExtractor.js"
   },
   "dependencies": {
-    "@date-io/date-fns": "1.x",
-    "@emotion/css": "^11.11.0",
+    "@date-io/date-fns": "^1.3.13",
+    "@emotion/css": "^11.11.2",
     "@greenlabs/rescript-react-hook-form": "^0.11.2",
-    "@jihchi/vite-plugin-rescript": "^5.3.0",
+    "@jihchi/vite-plugin-rescript": "^5.3.1",
     "@mobily/rescript-date": "^2.1.0",
-    "@rescript-mui/material": "^5.0.0-alpha.3",
-    "@rescript/core": "^0.3.1",
-    "@rescript/react": "^0.11.0",
-    "@ryyppy/rescript-promise": "^2.1.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@rescript-mui/lab": "5.0.0-alpha.2",
+    "@rescript-mui/material": "5.0.0-alpha.6",
+    "@rescript/core": "0.5.0",
+    "@rescript/react": "0.12.0-alpha.3",
+    "@ryyppy/rescript-promise": "2.1.0",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@vitejs/plugin-react": "^4.1.1",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.44.3",
-    "react-intl": "^6.4.2",
+    "react-hook-form": "^7.48.2",
+    "react-intl": "^6.5.2",
     "react-loading-overlay": "^1.0.1",
     "react-material-ui-carousel": "^3.4.2",
-    "rescript": "^11.0.0-beta.3",
+    "rescript": "11.0.0-rc.3",
     "rescript-react-intl": "^3.0.0",
-    "rescript-react-intl-extractor-bin": "^0.13.0",
+    "rescript-react-intl-extractor-bin": "^0.14.0",
     "rescript-vitest": "^1.2.0",
-    "rescript-webapi": "^0.8.0",
-    "vite": "^4.3.9",
-    "vitest": "^0.31.1",
-    "web-vitals": "^3.3.1",
-    "workbox-background-sync": "^6.5.4",
-    "workbox-broadcast-update": "^6.5.4",
+    "rescript-webapi": "^0.9.0",
+    "vite": "^4.5.0",
+    "vitest": "^0.34.6",
+    "web-vitals": "^3.5.0",
+    "workbox-background-sync": "^6.6.0",
+    "workbox-broadcast-update": "^6.6.0",
     "workbox-cacheable-response": "^6.5.4",
-    "workbox-core": "^6.5.4",
-    "workbox-expiration": "^6.5.4",
-    "workbox-google-analytics": "^6.5.4",
-    "workbox-navigation-preload": "^6.5.4",
-    "workbox-precaching": "^6.5.4",
-    "workbox-range-requests": "^6.5.4",
-    "workbox-routing": "^6.5.4",
-    "workbox-strategies": "^6.5.4",
-    "workbox-streams": "^6.5.4"
+    "workbox-core": "^6.6.0",
+    "workbox-expiration": "^6.6.0",
+    "workbox-google-analytics": "^6.6.0",
+    "workbox-navigation-preload": "^6.6.0",
+    "workbox-precaching": "^6.6.0",
+    "workbox-range-requests": "^6.6.0",
+    "workbox-routing": "^6.6.0",
+    "workbox-strategies": "^6.6.0",
+    "workbox-streams": "^6.6.0"
   },
   "eslintConfig": {
     "extends": [
