--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "@emotion/css": "^11.11.2",
     "@greenlabs/rescript-react-hook-form": "^0.11.2",
     "@jihchi/vite-plugin-rescript": "^5.3.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/pickers": "^3.3.11",
     "@mobily/rescript-date": "^2.1.0",
+    "@mui/lab": "^5.0.0-alpha.152",
+    "@mui/material": "^5.14.17",
+    "@mui/styles": "^5.14.17",
     "@rescript-mui/lab": "5.0.0-alpha.2",
     "@rescript-mui/material": "5.0.0-alpha.6",
     "@rescript/core": "0.5.0",
