--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@material-ui/icons": "^4.11.3",
     "@material-ui/pickers": "^3.3.11",
     "@mobily/rescript-date": "^2.1.0",
-    "@mui/lab": "^5.0.0-alpha.152",
-    "@mui/material": "^5.14.17",
-    "@mui/styles": "^5.14.17",
-    "@rescript-mui/lab": "5.0.0-alpha.2",
+    "@mui/lab": "^5.0.0-alpha.156",
+    "@mui/material": "^5.15.0",
+    "@mui/styles": "^5.15.0",
+    "@mui/x-date-pickers": "^6.18.5",
+    "@rescript-mui/lab": "5.0.0-alpha.3",
     "@rescript-mui/material": "5.0.0-alpha.6",
     "@rescript/core": "0.5.0",
     "@rescript/react": "0.12.0-alpha.3",
