--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "intl:extract-messages": "node ./scripts/intlExtractor.js"
   },
   "dependencies": {
-    "@date-io/date-fns": "^1.3.13",
     "@emotion/css": "^11.11.2",
     "@greenlabs/rescript-react-hook-form": "^0.11.2",
     "@jihchi/vite-plugin-rescript": "^5.3.1",
@@ -35,7 +34,7 @@
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.5.1",
     "@vitejs/plugin-react": "^4.1.1",
-    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
