--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   },
   "dependencies": {
     "@emotion/css": "^11.11.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@greenlabs/rescript-react-hook-form": "^0.11.2",
     "@jihchi/vite-plugin-rescript": "^5.3.1",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@material-ui/pickers": "^3.3.11",
     "@mobily/rescript-date": "^2.1.0",
+    "@mui/icons-material": "^5.15.1",
     "@mui/lab": "^5.0.0-alpha.156",
     "@mui/material": "^5.15.0",
     "@mui/styles": "^5.15.0",
