--- a/bsconfig.json
+++ b/bsconfig.json
@@ -20,20 +20,16 @@
   "suffix": ".bs.js",
   "bs-dependencies": [
     "@rescript/react",
-    "rescript-material-ui",
     "rescript-react-intl",
     "@ryyppy/rescript-promise",
     "@mobily/rescript-date",
-    "rescript-material-ui-lab",
     "rescript-webapi",
     "@rescript/core",
-    "@greenlabs/rescript-react-hook-form"
+    "@greenlabs/rescript-react-hook-form",
+    "@rescript-mui/material"
   ],
   "bs-dev-dependencies": ["rescript-vitest"],
   "bsc-flags": ["-open RescriptCore"],
   "jsx": { "version": 4, "mode": "automatic" },
-  "warnings": {
-    "number": "+A-42-48",
-    "error": "+A-3-44-102-103"
-  }
+  "uncurried": false
 }
