--- a/package.json
+++ b/package.json
@@ -4,50 +4,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "re:build": "rescript clean && rescript build -with-deps",
-    "re:start": "rescript clean && rescript build -with-deps -w",
-    "start": "vite",
-    "build:staging": "vite build --mode staging",
-    "build": "vite build",
-    "serve": "vite preview",
-    "test": "vitest",
+    "res:build": "rescript clean && rescript",
+    "res:dev": "rescript clean && rescript build -w",
+    "dev": "next dev",
+    "start": "next start",
+    "build:staging": "next build --mode staging",
+    "build": "next build",
     "intl:extract-messages": "node ./scripts/intlExtractor.js"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@greenlabs/rescript-react-hook-form": "^0.11.2",
-    "@jihchi/vite-plugin-rescript": "^5.5.0",
-    "@mobily/rescript-date": "^2.1.0",
     "@mui/icons-material": "^5.15.1",
     "@mui/lab": "^5.0.0-alpha.157",
     "@mui/material": "^5.15.1",
+    "@mui/material-nextjs": "^5.15.0",
     "@mui/styles": "^5.15.1",
     "@mui/x-date-pickers": "^6.18.6",
-    "@rescript-mui/lab": "5.0.0-alpha.3",
-    "@rescript-mui/material": "5.0.0-alpha.11",
-    "@rescript/core": "0.6.0",
-    "@rescript/react": "0.12.0-alpha.3",
-    "@ryyppy/rescript-promise": "2.1.0",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
-    "@vitejs/plugin-react": "^4.2.1",
     "dayjs": "^1.11.10",
+    "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-intl": "^6.5.5",
     "react-loading-overlay": "^1.0.1",
     "react-material-ui-carousel": "^3.4.2",
-    "rescript": "11.0.0-rc.8",
-    "rescript-react-intl": "^3.0.0",
-    "rescript-react-intl-extractor-bin": "^0.14.0",
-    "rescript-vitest": "^1.3.0",
-    "rescript-webapi": "^0.9.0",
-    "vite": "^5.0.10",
-    "vitest": "^1.1.0",
     "web-vitals": "^3.5.0",
     "workbox-background-sync": "^7.0.0",
     "workbox-broadcast-update": "^7.0.0",
@@ -62,11 +45,22 @@
     "workbox-strategies": "^7.0.0",
     "workbox-streams": "^7.0.0"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "devDependencies": {
+    "@greenlabs/rescript-react-hook-form": "^0.11.2",
+    "@mobily/rescript-date": "^2.1.0",
+    "@rescript-mui/lab": "5.0.0-alpha.3",
+    "@rescript-mui/material": "5.0.0-alpha.11",
+    "@rescript/core": "^0.6.0",
+    "@rescript/react": "0.12.0-alpha.3",
+    "@ryyppy/rescript-promise": "^2.1.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "reanalyze": "^2.23.0",
+    "rescript": "11.0.0-rc.8",
+    "rescript-react-intl": "^3.0.0",
+    "rescript-react-intl-extractor-bin": "^0.14.0",
+    "rescript-webapi": "^0.9.0"
   },
   "browserslist": {
     "production": [
@@ -79,8 +73,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "reanalyze": "^2.23.0"
   }
 }
