--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poppy-2",
-  "packageManager": "yarn@4.0.2",
+  "packageManager": "yarn@4.5.3",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,55 +13,53 @@
     "intl:extract-messages": "node ./scripts/intlExtractor.js"
   },
   "dependencies": {
-    "@emotion/cache": "^11.11.0",
-    "@emotion/css": "^11.11.2",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.1",
-    "@mui/lab": "^5.0.0-alpha.157",
-    "@mui/material": "^5.15.1",
-    "@mui/material-nextjs": "^5.15.0",
-    "@mui/styles": "^5.15.1",
-    "@mui/x-date-pickers": "^6.18.6",
-    "dayjs": "^1.11.10",
-    "next": "^14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
-    "react-intl": "^6.5.5",
+    "@emotion/cache": "^11.14.0",
+    "@emotion/css": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.0",
+    "@mui/lab": "6.0.0-beta.21",
+    "@mui/material": "^6.3.0",
+    "@mui/material-nextjs": "^6.3.0",
+    "@mui/styles": "^6.3.0",
+    "@mui/x-date-pickers": "^7.23.3",
+    "dayjs": "^1.11.13",
+    "next": "^15.1.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-intl": "^7.0.4",
     "react-loading-overlay": "^1.0.1",
     "react-material-ui-carousel": "^3.4.2",
-    "web-vitals": "^3.5.0",
-    "workbox-background-sync": "^7.0.0",
-    "workbox-broadcast-update": "^7.0.0",
-    "workbox-cacheable-response": "^7.0.0",
-    "workbox-core": "^7.0.0",
-    "workbox-expiration": "^7.0.0",
-    "workbox-google-analytics": "^7.0.0",
-    "workbox-navigation-preload": "^7.0.0",
-    "workbox-precaching": "^7.0.0",
-    "workbox-range-requests": "^7.0.0",
-    "workbox-routing": "^7.0.0",
-    "workbox-strategies": "^7.0.0",
-    "workbox-streams": "^7.0.0"
+    "web-vitals": "^4.2.4",
+    "workbox-background-sync": "^7.3.0",
+    "workbox-broadcast-update": "^7.3.0",
+    "workbox-cacheable-response": "^7.3.0",
+    "workbox-core": "^7.3.0",
+    "workbox-expiration": "^7.3.0",
+    "workbox-google-analytics": "^7.3.0",
+    "workbox-navigation-preload": "^7.3.0",
+    "workbox-precaching": "^7.3.0",
+    "workbox-range-requests": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0",
+    "workbox-streams": "^7.3.0"
   },
   "devDependencies": {
-    "@greenlabs/rescript-react-hook-form": "^0.11.2",
-    "@mobily/rescript-date": "^2.1.0",
-    "@rescript-mui/lab": "5.0.0-alpha.3",
-    "@rescript-mui/material": "5.0.0-alpha.13",
-    "@rescript/core": "^0.6.0",
-    "@rescript/react": "0.12.0-alpha.3",
-    "@ryyppy/rescript-promise": "^2.1.0",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
+    "@greenlabs/rescript-react-hook-form": "^7.31.0",
+    "@rescript-mui/lab": "^5.0.0",
+    "@rescript-mui/material": "^5.0.0",
+    "@rescript/core": "^1.6.1",
+    "@rescript/react": "^0.13.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "env-cmd": "^10.1.0",
     "reanalyze": "^2.23.0",
-    "rescript": "11.0.0-rc.8",
+    "rescript": "^11.1.4",
     "rescript-react-intl": "^3.0.0",
     "rescript-react-intl-extractor-bin": "^0.14.0",
-    "rescript-webapi": "^0.9.0"
+    "rescript-webapi": "^0.10.0"
   },
   "browserslist": {
     "production": [
