Finalize the look of individual sections

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,4 @@
-NEXT_PUBLIC_SMTPJS_SECURE_TOKEN=7fc7f2ee-f265-4d2e-8c97-fb94a84aec38
+# Poppy hosting
+# NEXT_PUBLIC_SMTPJS_SECURE_TOKEN=7fc7f2ee-f265-4d2e-8c97-fb94a84aec38
+# AWS S3
+NEXT_PUBLIC_SMTPJS_SECURE_TOKEN=1b52bc7a-04a1-4138-890d-56bfee122817
