Start reimplementing to ElasticEmail

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "intl": "node ./scripts/intlExtractor.js"
   },
   "dependencies": {
+    "@elasticemail/elasticemail-client": "^4.0.26",
     "@emotion/cache": "^11.14.0",
     "@emotion/css": "^11.13.5",
     "@emotion/react": "^11.14.0",
