--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
     "@emotion/css": "^11.13.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.0",
-    "@mui/lab": "6.0.0-beta.23",
-    "@mui/material": "^6.4.0",
-    "@mui/material-nextjs": "^6.3.1",
-    "@mui/styles": "^6.4.0",
-    "@mui/x-date-pickers": "^7.24.0",
+    "@mui/icons-material": "^6.4.11",
+    "@mui/lab": "6.0.0-dev.240424162023-9968b4889d",
+    "@mui/material": "^6.4.11",
+    "@mui/material-nextjs": "^6.4.3",
+    "@mui/styles": "^6.4.11",
+    "@mui/x-date-pickers": "^7.29.3",
     "dayjs": "^1.11.13",
-    "next": "^15.1.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "react-intl": "^7.1.1",
+    "next": "^15.3.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4",
+    "react-intl": "^7.1.11",
     "react-loading-overlay": "^1.0.1",
     "react-material-ui-carousel": "^3.4.2",
-    "web-vitals": "^4.2.4",
+    "web-vitals": "^5.0.1",
     "workbox-background-sync": "^7.3.0",
     "workbox-broadcast-update": "^7.3.0",
     "workbox-cacheable-response": "^7.3.0",
@@ -47,13 +47,13 @@
   },
   "devDependencies": {
     "@greenlabs/rescript-react-hook-form": "^7.31.0",
-    "@rescript-mui/lab": "^5.0.0",
-    "@rescript-mui/material": "^5.0.0",
+    "@rescript-mui/lab": "^5.1.1",
+    "@rescript-mui/material": "^5.1.1",
     "@rescript/core": "^1.6.1",
-    "@rescript/react": "^0.13.0",
+    "@rescript/react": "^0.13.1",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^14.6.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "env-cmd": "^10.1.0",
     "reanalyze": "^2.23.0",
     "rescript": "^11.1.4",
